--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proyecto-final",
-  "version": "1.0.0",
-  "description": "───▄▀▀▀▄▄▄▄▄▄▄▀▀▀▄───\r ───█▒▒░░░░░░░░░▒▒█───\r ────█░░█░░░░░█░░█────\r ─▄▄──█░░░▀█▀░░░█──▄▄─\r █░░█─▀▄░░░░░░░▄▀─█░░█",
+  "name": "vittoria-calzados",
+  "version": "1.0.1",
+  "description": "Todo estilo de zapatos como botas, borcegos, zapatillas y accesorios para mujeres, hombres y niños.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/AlanLuna-00/ProyectoFinalCoder.git"
   },
-  "author": "",
+  "author": "Alan Luna",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AlanLuna-00/ProyectoFinalCoder/issues"
